initial SSR setup

--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "Just another seed for mine and your React projects",
   "scripts": {
     "start": "webpack serve --mode development --open",
+    "ssr:start": "node backend/ssr/index.js",
+    "local-server:start": "node backend/localTodoListServer/index.js",
     "run:docker-compose": "docker-compose up",
     "run:docker-compose:rebuild": "docker-compose up --build",
     "build": "webpack --mode production",
-    "test:unit": "jest",
-    "test:unit:watch": "jest --watch",
-    "test:components:browser": "cypress run-ct --headed --config-file ./cypress/configs/components.json --config video=false",
-    "test:components:ci": "cypress run-ct --config-file ./cypress/configs/components.json",
     "test:e2e:browser": "cypress run --browser chrome --config-file ./cypress/configs/e2e.json --config video=false",
     "test:e2e:ci": "cypress run --config-file ./cypress/configs/e2e.json",
-    "cypress": "cypress open",
-    "cypress-ct": "cypress open-ct",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --output-dir ./dist/storybook"
+    "cypress": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -39,12 +34,17 @@
     "@babel/preset-typescript": "7.14.5",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
+    "@yana4961/react-todo-list": "^2.1.0",
     "babel-loader": "8.2.2",
     "css-loader": "5.2.6",
+    "express": "^4.17.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.3.1",
+    "puppeteer": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "style-loader": "2.0.0",
     "typescript": "4.3.2",
     "url-loader": "4.1.1",
@@ -81,7 +81,7 @@
     "printWidth": 120,
     "tabWidth": 2,
     "useTabs": false,
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "jsxSingleQuote": false,
     "bracketSpacing": true,
